fix compilation, list.of->Arrays.asList